--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha256-4w9DunooKSr3MFXHXWyFER38WmPdm361bQS/2KUWZbU=" crossorigin="anonymous">
-    <title>Personal Website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <title>Abenezer F./Blog</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
@@ -13,27 +16,30 @@
 <body>
 <!-- The navigation bar -->
 <nav class="navbar navbar-expand-lg sticky-top" id="nav">
-    <div class="container-fluid">
+    <div class="container-fluid" id="nav-space">
         <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto" id="nav-list">
+                <li class="line nav-item">
+                    <a class="nav-link" href="contact.html">ABOUT</a>
+                </li>
                 <li class="line nav-item active">
                     <a class="nav-link active" href="blog.html">BLOG</a>
                 </li>
                 <li class=" line nav-item">
-                    <a class="nav-link" href="task.html">TASKS</a>
+                    <a class="nav-link" href="talk.html">TALKS</a>
                 </li>
                 <li class=" line nav-item ">
                     <a class="nav-link" href="gallery.html">GALLERY</a>
                 </li>
                 <li class="line nav-item">
-                    <a class="nav-link" href="contact.html">ABOUT / CONTACTS</a>
+                    <a class="nav-link" href="resume.html">RESUME</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link js-search" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
+                <li class="line nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
@@ -49,94 +55,104 @@
 </div>
 
 <!-- Content on the page -->
-<div class="container">
-    <div class="row mx-auto justify-content-center">
-        <div class=" blog col-8 mb-5">
-            <h4><a href="blog.html"> Make Your Body &amp; Mind Strong:</a> </h4>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class=" blog col-9 col-lg-7 mb-5">
+            <h4><a class="text-decoration-none" href="blog.html"> Make Your Body &amp; Mind Strong:</a> </h4>
             <p>Working out is essential in order to relax your muscles and fibers, which increases your reflexses.</p>
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
-            <div class="time">Last Upadated on Mar 12, 2020 : 19 min read .    
-                <span class="link-categories ml-3">
-                    <i class="fas fa-folder mr-1"></i><a href="#" target="_blank">hugo</a>, <a href="#" target="_blank">blogdown</a>, <a href="#" target="_blank">netlify</a>
+            <div class="time text-muted">Last Upadated on Mar 12, 2020 : 19 min read .    
+                <span class="link-categories">
+                    <i class="fas fa-folder mx-2 ms-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="#" target="_blank">Github</a>
                 </span>
             </div> 
         </div>
-        <div class="col-2" id="blog-img-space">
-            <a href="blog.html" >
-                <img id="logo" src="./assets/images/workout.jpg" alt="">
-            </a>
+        <div class="col-3 col-lg-2" id="blog-img-space">
+            <div class="text-end">
+                <a href="blog.html" >
+                    <img id="logo" src="./assets/images/workout.jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
-    <div class="row mx-auto justify-content-center">
-        <div class=" blog col-8 mb-5">
-            <h4><a href="blog.html"> Have a Slice:</a> </h4>
+    <div class="row justify-content-center">
+        <div class=" blog col-9 col-lg-7 mb-5">
+            <h4><a class="text-decoration-none" href="blog.html"> Have a Slice:</a> </h4>
             <p>Every one should have their meals three times a day, to maintain their health and to increase stamina.</p>
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
-            <div class="time">Last Upadated on Jan 10, 2020  12:30 min read  
+            <div class="time text-muted">Last Upadated on Jan 10, 2020  12:30 min read  
             </div> 
         </div>
-        <div class="col-2" id="blog-img-space">
-            <a href="blog.html" >
-                <img id="logo" src="./assets/images/slice (1).jpg" alt="">
-            </a>
+        <div class="col-3 col-lg-2" id="blog-img-space">
+            <div class="text-end">
+                <a href="blog.html" >
+                    <img id="logo" src="./assets/images/slice (1).jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
-    <div class="row mx-auto justify-content-center">
-        <div class=" blog col-8 mb-5">
-            <h4><a href="blog.html">Web Design and Development:</h4>
+    <div class="row justify-content-center">
+        <div class=" blog col-9 col-lg-7 mb-5">
+            <h4><a class="text-decoration-none" href="blog.html">Web Design and Development:</a></h4>
             <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
-            <div class="time">Last Upadated on Feb 13, 2020  3:40 : 45 min read 
+            <div class="time text-muted">Last Upadated on Feb 13, 2020  3:40 : 45 min read 
             </div> 
         </div>
-        <div class="col-2" id="blog-img-space">
-            <a href="blog.html" >
-                <img id="logo" src="./assets/images/web.jpg" alt="">
-            </a>
+        <div class="col-3 col-lg-2" id="blog-img-space">
+            <div class="text-end">
+                <a href="blog.html" >
+                    <img id="logo" src="./assets/images/web.jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
-    <div class="row mx-auto justify-content-center">
-        <div class=" blog col-8 mb-5">
-            <h4><a href="blog.html"> Be friends With Books</a></h4>
+    <div class="row justify-content-center">
+        <div class=" blog col-9 col-lg-7 mb-5">
+            <h4><a class="text-decoration-none" href="blog.html"> Be friends With Books</a></h4>
             <p>Reading is one of the best ways of entertainment and aquiring knowledge, so be open minded all the time.</p>
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
-            <div class="time">Last Upadated on Jan 29, 2020  5:20: 7 min read .    
-                <span class="link-categories ml-3">
-                    <i class="fas fa-folder mr-1"></i><a href="#" target="_blank">hugo</a>, <a href="#" target="_blank">blogdown</a>
+            <div class="time text-muted">Last Upadated on Jan 29, 2020  5:20: 7 min read .    
+                <span class="link-categories">
+                    <i class="fas fa-folder mx-2 mx-0"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="#" target="_blank">Github</a>
                 </span>
             </div> 
         </div>
-        <div class="col-2" id="blog-img-space">
-            <a href="blog.html" >
-                <img id="logo" src="./assets/images/books.jpg" alt="">
-            </a>
+        <div class="col-3 col-lg-2 " id="blog-img-space">
+            <div class="text-end">
+                <a href="blog.html" >
+                    <img id="logo" src="./assets/images/books.jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
-    <div class="row mx-auto justify-content-center">
-        <div class=" blog col-8 mb-5">
-            <h4><a href="blog.html">Food Is Necessary:</a></h4>
+    <div class="row justify-content-center">
+        <div class=" blog col-9 col-lg-7 mb-5">
+            <h4><a class="text-decoration-none" href="blog.html">Food Is Necessary:</a></h4>
             <p>Try to enjoy as many meals as you can, by traveling all around the world. in addition learn more tradition by knowing the world.</p>
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
-            <div class="time">Last Upadated on Feb 5, 2020 11:56  25 min read .    
-                <span class="link-categories ml-3">
-                    <i class="fas fa-folder mr-1"></i><a href="#" target="_blank">hugo</a>, <a href="#" target="_blank">blogdown</a>
+            <div class="time text-muted">Last Upadated on Feb 5, 2020 11:56  25 min read .    
+                <span class="link-categories ms-0">
+                    <i class="fas fa-folder mx-2"></i><a class="text-decoration-none" href="#" target="_blank">Benafiab</a>, <a class="text-decoration-none" href="#" target="_blank">Github</a>
                 </span>
             </div> 
         </div>
-        <div class="col-2" id="blog-img-space">
-            <a href="blog.html" >
-                <img id="logo" src="./assets/images/slice (2).jpg" alt="">
-            </a>
+        <div class="col-3 col-lg-2" id="blog-img-space">
+            <div class="text-end">
+                <a href="blog.html" >
+                    <img id="logo" src="./assets/images/slice (2).jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
 </div>
@@ -151,17 +167,22 @@
             <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
         <p class="footer-text">
-                © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>, <a href="#" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a>, the <a href="#" target="_blank"><i class="fab fa-r-project"></i> </a><a href="" target="_blank" >blogdown</a> package, and the 
-                <a href="" target="_blank">Academic theme</a> for <a href="" target="_blank">Hugo</a>.
-        <span class="float-right" aria-hidden="true">
-            <a href="#" id="back_to_top">
-                <span class="up_icon">
-                    <i class="fas fa-chevron-up fa-2x"></i>
-                </span>
-            </a>
-        </span>
+            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
+        <div class="text-end">
+            <span class="right-icon" aria-hidden="true">
+                <a href="#" id="back_to_top">
+                    <span class="up_icon">
+                        <i class="fas fa-chevron-up fa-2x"></i>
+                    </span>
+                </a>
+            </span>
+        </div>
         </p>
     </footer>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
