--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abenezer F. /Contact</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha256-4w9DunooKSr3MFXHXWyFER38WmPdm361bQS/2KUWZbU=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <title>Abenezer F./About</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
@@ -12,13 +16,16 @@
 <body>
 <!-- This is the navigation bar -->
 <nav class="navbar navbar-expand-lg sticky-top" id="nav">
-    <div class="container-fluid">
+    <div class="container-fluid" id="nav-space">
         <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto" id="nav-list">
+                <li class="line nav-item">
+                    <a class="nav-link" href="contact.html">ABOUT</a>
+                </li>
                 <li class="line nav-item active">
                     <a class="nav-link active" href="blog.html">BLOG</a>
                 </li>
@@ -29,10 +36,10 @@
                     <a class="nav-link" href="gallery.html">GALLERY</a>
                 </li>
                 <li class="line nav-item">
-                    <a class="nav-link" href="contact.html">ABOUT / CONTACTS</a>
+                    <a class="nav-link" href="resume.html">RESUME</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link js-search" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
+                <li class="line nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
@@ -47,23 +54,43 @@
     </div>
 </div>
 <!-- The story telling table of about me -->
-<div class="container">
-    <div class="text-container mt-lg-5 mb-lg-5">
-        <p >I am originally from small town called Balile, Eastern Hararge Ethiopia, and am a proud member of solvers group from second year students. After highschool, I am studing Software engineering, I joined Addis Ababa University in (2011). I am now a second year student and a member of DSC( Developers Student Club) which is undergraduate students community. Prior to that, I ued to have tours with my friends.</p>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-9">
+            <div class="text-container mt-sm-5 mb-sm-5">
+                <p >I am originally from small town called Balile, Eastern Hararge Ethiopia, and am a proud member of solvers group from second year students. After highschool, I am studing Software engineering, I joined Addis Ababa University in (2011). I am now a second year student and a member of DSC( Developers Student Club) which is undergraduate students community. Prior to that, I ued to have tours with my friends.</p>
+            </div>
+        </div>
     </div>
-    <div class="img-container m-lg-auto">
-        <img src="./assets/images/friends.jpg" alt="me and my friends visiting holy place">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-9">
+            <div class="img-container m-lg-auto">
+                <img src="./assets/images/friends.jpg" alt="me and my friends visiting holy place">
+            </div>
+        </div>
     </div>
-    <div class="text-container mt-lg-5 mb-lg-5">
-        <p>As a student I have participated in many different clubs in order to browden my experience, like DSC, PCA, and others too. Up untill now I have not made any devolpment that have big inpact on the society, but my plan is to make a better society that have a good understanding of technology and it's impact by comming up with a solution from the knowledge that I have gathered through my life of learning. </p>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-9">
+            <div class="text-container mt-sm-5 mb-sm-5">
+                <p>As a student I have participated in many different clubs in order to browden my experience, like DSC, PCA, and others too. Up untill now I have not made any devolpment that have big inpact on the society, but my plan is to make a better society that have a good understanding of technology and it's impact by comming up with a solution from the knowledge that I have gathered through my life of learning. </p>
+            </div>
+        </div>
     </div>
-    <div class="img-container m-lg-auto">
-        <img src="./assets/images/bro2.jpg" alt="Picture with my brother">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-9">
+            <div class="img-container m-lg-auto">
+                <img src="./assets/images/bro2.jpg" alt="Picture with my brother">
+            </div>
+        </div>
     </div>
-    <div class="text-container mt-lg-5 mb-lg-5">
-        <h2>Some Things About My Family</h2>
-        <p>As I mentioned earlier my mother name is Azalech Ababa and she is a language teacher (specifically Amharic language). She has been teaching about 30 years now, so she is my roll model. As for father, his name is Fekadu Tefera and he is health officier, so most of the time he spent his time working in rural areas. Therefor we don't have family time more rapidly. But you should also have to know that I have a twin brother whose name is Natnael Fekadu. Since his age is the same as my age, me my brother are currently learning in Addis Ababa Universiy and he is studying medicine in order to be a doctor. As a whole I didn't have a sister, but I have many cousins that are like sisters to me. Finally I just want to say that my family are the parents that any kid could ever wish for. I Love My Family.</p>
-        <p>You can follow my current work in AAIT on GitHub. Thank you so much for reading.</p><br>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-9">
+            <div class="text-container mt-sm-5 mb-sm-3">
+                <h2>Some Things About My Family</h2>
+                <p>As I mentioned earlier my mother name is Azalech Ababa and she is a language teacher (specifically Amharic language). She has been teaching about 30 years now, so she is my roll model. As for father, his name is Fekadu Tefera and he is health officier, so most of the time he spent his time working in rural areas. Therefor we don't have family time more rapidly. But you should also have to know that I have a twin brother whose name is Natnael Fekadu. Since his age is the same as my age, me my brother are currently learning in Addis Ababa Universiy and he is studying medicine in order to be a doctor. As a whole I didn't have a sister, but I have many cousins that are like sisters to me. Finally I just want to say that my family are the parents that any kid could ever wish for. I Love My Family.</p>
+                <p>You can follow my current work in AAIT on GitHub. Thank you so much for reading.</p><br>
+            </div>
+        </div>
     </div>
 </div>
 <!-- The image in about me -->
@@ -76,20 +103,19 @@
 </div>
 
 <!-- Contact me Part -->
-<div class="container mt-lg-3" id="form">
-    <div class="row">
-        <div class="col-lg-5 col-12" >
-            <h3 class="welcome">Hi there</h3>
+<div class="container-fluid mt-sm-3" id="form">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-3" >
+            <h3 class="welcome">Hi there!</h3>
             <p class="welcome-text">This form is for contacting me about speaking engagements, opportunities to work together, or mentorship requests. This is NOT a form for requesting help.</p>
         </div>
-        <div class="col-lg-7">
-            <div class="container">
-                <form action="">
+        <div class="col-12 col-md-12 col-lg-6">
+                <form method="POST" action="mailto:se.abenezer.fekadu@gmail.com" enctype="utf-8">
                     <div class="form-group">
-                        <input class="form-control" type="text" name="fname" id="fname" placeholder="Name">
+                        <input class="form-control" pattern="[A-Za-z]{4,8}" type="text" name="fname" id="fname" placeholder="Name" required>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="email" name="memail" id="memail" placeholder="Email">
+                        <input class="form-control" type="email" name="email" id="email" placeholder="Email" required>
                     </div>
                     <div class="form-group">
                         <textarea  class="form-control" name="" id="" rows="7" placeholder="Message"></textarea>
@@ -98,7 +124,6 @@
                         <i class="fas fa-play-circle mr-1"></i> send
                     </a>                
                 </form>
-            </div>
         </div>
     </div>
 </div>
@@ -110,19 +135,22 @@
             <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
         <p class="footer-text">
-                © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>, <a href="#" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a>, the <a href="#" target="_blank"><i class="fab fa-r-project"></i> </a><a href="" target="_blank" >blogdown</a> package, and the 
-                <a href="" target="_blank">Academic theme</a> for <a href="" target="_blank">Hugo</a>.
-        <span class="float-right" aria-hidden="true">
-            <a href="#" id="back_to_top">
-                <span class="up_icon">
-                    <i class="fas fa-chevron-up fa-2x"></i>
-                </span>
-            </a>
-        </span>
+            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
+        <div class="text-end">
+            <span class="right-icon" aria-hidden="true">
+                <a href="#" id="back_to_top">
+                    <span class="up_icon">
+                        <i class="fas fa-chevron-up fa-2x"></i>
+                    </span>
+                </a>
+            </span>
+        </div>
         </p>
     </footer>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
