--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha256-4w9DunooKSr3MFXHXWyFER38WmPdm361bQS/2KUWZbU=" crossorigin="anonymous">
     <title>Abenezer F./Gallery</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
@@ -14,7 +16,7 @@
 
 <!-- This the navigation bar on the top with my name  -->
 <nav class="navbar navbar-expand-lg sticky-top" id="nav">
-    <div class="container-fluid">
+    <div class="container-fluid" id="nav-space">
         <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -36,8 +38,8 @@
                 <li class="line nav-item">
                     <a class="nav-link" href="resume.html">RESUME</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link js-search" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
+                <li class="line nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
@@ -48,49 +50,56 @@
 <div class="container blog-text">
     <div class="row">
         <div class="col-12">
-            <h1>Photos</h1>
+            <h1>Pictures</h1>
         </div>
     </div>
 </div>
 
 <!-- This is for the red option on the top -->
-<div class="btn-group">
-    <button type="button" class="btn btn-primary">All</button>
-    <button type="button" class="btn btn-primary">Family</button>
-    <button type="button" class="btn btn-primary">Friends</button>
-    <button type="button" class="btn btn-primary">Events</button>
-    <button type="button" class="btn btn-primary">Places</button>
-    <button type="button" class="btn btn-primary">Course</button>
-    <button type="button" class="btn btn-primary">Book</button>
+<div class="containe-fluid">
+    <div class="row justify-content-center">
+        <div class="col-9 text-center">
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary">All</button>
+                <button type="button" class="btn btn-primary">Family</button>
+                <button type="button" class="btn btn-primary">Friends</button>
+                <button type="button" class="btn btn-primary">Events</button>
+                <button type="button" class="btn btn-primary">Places</button>
+                <button type="button" class="btn btn-primary">Course</button>
+                <button type="button" class="btn btn-primary">Book</button>
+            </div>
+        </div>
+    </div>
 </div>
 
+
 <!-- This is for the gallary layout -->
-<div class="container mt-5">
-    <div class="row mx-auto justify-content-center">
-        <div class="col-lg-3">
+<div class="container-fluid mt-5">
+    <div class="row justify-content-center">
+        <div class=" col-d-12 col-5 col-md-5 col-lg-3">
             <div class="card">
                 <img class="card-img-top img-fluid" src="./assets/images/little bro.jpg" alt="brother pics">
                 <div class="card-body">
                     <h5 class="card-title">Mothers Graduation Day</h5>
-                    <p class="card-text">we were exited to congrat her, this was a pic on that day.</p>
+                    <p class="card-text text-muted">we were exited to congrat her, this was a pic on that day.</p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top img-fluid" src="./assets/images/little bro.jpg" alt="brother pics">
+                <img class="card-img-top img-fluid" src="./assets/images/ceremony.jpg" alt="brother pics">
                 <div class="card-body">
-                    <h5 class="card-title">Mothers Graduation Day</h5>
-                    <p class="card-text">we were exited to congrat her, this was a pic on that day.</p>
+                    <h5 class="card-title">Celebrating Epiphany</h5>
+                    <p class="card-text text-muted">I was with my brother and friends to celebrate epiphany at Meskel Square.</p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top img-fluid" src="./assets/images/little bro.jpg" alt="brother pics">
+                <img class="card-img-top img-fluid" src="./assets/images/babile friends.jpg" alt="brother pics">
                 <div class="card-body">
-                    <h5 class="card-title">Mothers Graduation Day</h5>
-                    <p class="card-text">we were exited to congrat her, this was a pic on that day.</p>
+                    <h5 class="card-title">Get Together</h5>
+                    <p class="card-text">Me and my friends were having fun and chiling together.</p>
                 </div>
             </div>
         </div>   
-        <div class="col-lg-3">
+        <div class="col-d-12 col-4 col-md-4 col-lg-3">
             <div class="card">
                 <img class="card-img-top img-fluid" src="./assets/images/family.jpg"alt="family photo" >
                 <div class="card-body">
@@ -104,14 +113,12 @@
                 <img class="card-img-top img-fluid" src="./assets/images/family.jpg"alt="family photo" >
                 <div class="card-body">
                     <h5 class="card-title">Family Gathering</h5>
-                    <p class="card-text">
-                        The whole family was there having a greate time together.
-                        </p>
+                    <p class="card-text text-muted">The whole family was there having a greate time together.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="card-container">
-                    <img class="card-img-top img-fluid" src="./assets/images/family.jpg"alt="family photo" >
+                    <img class="card-img-top img-fluid" src="./assets/images/hangout.jpg"alt="family photo" >
                     <div class="hoverText">
                         <div class="caption">
                             <i style="font-size:50px; color:red" class="fa fa-paw" aria-hidden="true"></i>
@@ -119,167 +126,36 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Family Gathering</h5>
-                    <p class="card-text">
-                        The whole family was there having a greate time together.
-                        </p>
+                    <h5 class="card-title">Journey Together</h5>
+                    <p class="card-text text-muted">We were having a tour around the capital city A.A</p>
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-d-12 col-lg-3">
             <div class="card">
-                <img src="assets/images/chill.jpg" class="card-img-top" alt="me and my brother">
+                <img src="assets/images/friends.jpg" class="card-img-top" alt="me and my brother">
                 <div class="card-body">
-                    <h5 class="card-title">Exploring Day</h5>
-                    <p class="card-text">On this day me and my brother going all around the city.</p>
+                    <h5 class="card-title">Religious Journey</h5>
+                    <p class="card-text text-muted">We were visiting ancient religious places together.</p>
                 </div>
             </div>
             <div class="card">
-                <img src="assets/images/chill.jpg" class="card-img-top" alt="me and my brother">
+                <img src="assets/images/birthday.jpg" class="card-img-top" alt="me and my brother">
                 <div class="card-body">
-                    <h5 class="card-title">Exploring Day</h5>
-                    <p class="card-text">On this day me and my brother going all around the city.</p>
+                    <h5 class="card-title">Birthday</h5>
+                    <p class="card-text text-muted">This was a birth day photo for my nephiws in the city. </p>
                 </div>
             </div>
             <div class="card">
-                <img src="assets/images/chill.jpg" class="card-img-top" alt="me and my brother">
+                <img src="assets/images/bro friends.jpg" class="card-img-top" alt="me and my brother">
                 <div class="card-body">
-                    <h5 class="card-title">Exploring Day</h5>
-                    <p class="card-text">On this day me and my brother going all around the city.</p>
+                    <h5 class="card-title">Hanging Out</h5>
+                    <p class="card-text text-muted">This day was when i met brothers friends from class.</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
-        <table cellspacing="10px">
-            <tr>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/little bro.jpg" alt="family photo"><br>
-                                <big>
-                                    <label for="">Mothers Graduation Day</label>
-                                </big>
-                                <p> we were exited to congrat her, this was a pic on that day.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/family.jpg" alt="brother pics"><br>
-                                <big>
-                                    <label for="">Family Gathering</label>
-                                </big>
-                                <p>The whole family was there having a greate time together.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/chill.jpg" ><br>
-                                <big>
-                                    <label for="">Exploring Day</label>
-                                </big>
-                                <p>On this day me and my brother going all around the city.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/ceremony.jpg" alt="epiphany day"><br>
-                                <big>
-                                    <label for="">Celebratig Epiphany</label>
-                                </big>
-                                <p>I was with my brother and friends to celebrate epiphany.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/babile friends.jpg" alt="hanging out with friends"><br>
-                                    <big>
-                                        <label for="">Get Together</label>
-                                    </big>
-                                <p>Me and my friends were having fun and chiling together.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/hangout.jpg" alt="hanging out with my brother"><br>
-                                <big>
-                                    <label for="">Journey Together</label>
-                                </big>
-                                <p>We were having a tour around the capital city A.A</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/friends.jpg" alt="church tour"><br>
-                                <big>
-                                    <label>Religious Journey</label>
-                                </big>
-                                <p>We were visiting ancient religious places together.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/birthday.jpg" alt="my nephiws birthday"><br>
-                                <big>
-                                    <label for="">Birthday</label>
-                                </big>
-                                <p>This was a birth day photo for my nephiws in the city. </p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table bgcolor="white">
-                        <tr>
-                            <td>
-                                <img src="./assets/images/bro friends.jpg" alt="meet new friends"><br>
-                                <big>
-                                    <label for="">Hanging Out</label>
-                                </big>
-                                <p>This day was when i met brothers friends from class.</p>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
 
 <!-- This is the footers logo and other features -->
 <div class="container">
@@ -288,15 +164,16 @@
             <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
         <p class="footer-text">
-                © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>, <a href="#" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a>, the <a href="#" target="_blank"><i class="fab fa-r-project"></i> </a><a href="" target="_blank" >blogdown</a> package, and the 
-                <a href="" target="_blank">Academic theme</a> for <a href="" target="_blank">Hugo</a>.
-        <span class="float-right" aria-hidden="true">
-            <a href="#" id="back_to_top">
-                <span class="up_icon">
-                    <i class="fas fa-chevron-up fa-2x"></i>
-                </span>
-            </a>
-        </span>
+            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
+        <div class="text-end">
+            <span class="right-icon" aria-hidden="true">
+                <a href="#" id="back_to_top">
+                    <span class="up_icon">
+                        <i class="fas fa-chevron-up fa-2x"></i>
+                    </span>
+                </a>
+            </span>
+        </div>
         </p>
     </footer>
 </div>
