--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha256-4w9DunooKSr3MFXHXWyFER38WmPdm361bQS/2KUWZbU=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Abenezer F./Resume</title>
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,36 +16,34 @@
 <body>
     <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg sticky-top" id="nav">
-        <div class="container mx-auto justify-content-center">
-            <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
-        </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="container mx-auto justify-content-center">
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto" id="nav-list">
-                        <li class="line nav-item">
-                            <a class="nav-link" href="contact.html">ABOUT</a>
-                        </li>
-                        <li class="line nav-item active">
-                            <a class="nav-link active" href="blog.html">BLOG</a>
-                        </li>
-                        <li class=" line nav-item">
-                            <a class="nav-link" href="talk.html">TALKS</a>
-                        </li>
-                        <li class=" line nav-item ">
-                            <a class="nav-link" href="gallery.html">GALLERY</a>
-                        </li>
-                        <li class="line nav-item">
-                            <a class="nav-link" href="resume.html">RESUME</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link js-search" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
-                        </li>
-                    </ul>
-                </div>
+    <div class="container-fluid" id="nav-space">
+        <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto" id="nav-list">
+                    <li class="line nav-item">
+                        <a class="nav-link" href="contact.html">ABOUT</a>
+                    </li>
+                    <li class="line nav-item active">
+                        <a class="nav-link active" href="blog.html">BLOG</a>
+                    </li>
+                    <li class=" line nav-item">
+                        <a class="nav-link" href="talk.html">TALKS</a>
+                    </li>
+                    <li class=" line nav-item ">
+                        <a class="nav-link" href="gallery.html">GALLERY</a>
+                    </li>
+                    <li class="line nav-item">
+                        <a class="nav-link" href="resume.html">RESUME</a>
+                    </li>
+                    <li class="line nav-item">
+                        <a class="nav-link" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
             </div>
+    </div>
 </nav>
 <!-- fixed photo -->
 <div class="parrallex2">
@@ -52,12 +51,12 @@
     </div>
 </div>
 <!-- Exprience  -->
-<div class="container mt-5">
-    <div class="row mx-auto justify-content-center">
-        <div class="col-lg-4 col-12">
-            <h2>Exprience</h2>
+<div class="container-fluid mt-5">
+    <div class="row justify-content-center">
+        <div class="col-12  col-md-12 col-lg-3">
+            <h2 class="wow">Experience</h2>
         </div>
-        <div class="col-lg-2 col-4">
+        <div class="d-none d-sm-block col-sm-1 col-lg-2">
                     <div class="wrapper">
                         <div class="circle">
                         </div>
@@ -78,33 +77,33 @@
                         </div>
                     </div>
         </div>
-        <div class="col-lg-4 col-8">
-            <div class="card" style="width: 23rem;">
+        <div class="col-sm-11 col-lg-4 ">
+            <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Web Designer and Developer</h5>
                     <a href="#" class="card-link">ITSC</a>
                     <h6 class="card-subtitle mb-2 text-muted">March 2020 – Present Addis Ababa</h6>
                 </div>
             </div>
-            <div class="card" style="width: 23rem;">
+            <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Mobile App Programer</h5>
                     <a href="#" class="card-link">AAIT</a>
                     <h6 class="card-subtitle mb-2 text-muted">October 2019 – Present Addis Ababa</h6>
                 </div>
             </div>
-            <div class="card" style="width: 23rem;">
+            <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Software Developer</h5>
                     <a href="#" class="card-link">AAIT</a>
-                    <h6 class="card-subtitle mb-2 text-muted">October 2016– Present Addis Ababa</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">October 2018 – Present Addis Ababa</h6>
                 </div>
             </div>
-            <div class="card" style="width: 23rem;">
+            <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Web Designer and Developer</h5>
+                    <h5 class="card-title">Data Base Manager</h5>
                     <a href="#" class="card-link">ITSC</a>
-                    <h6 class="card-subtitle mb-2 text-muted">March 2020 – Present Addis Ababa</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">March 2019 – Present Addis Ababa</h6>
                 </div>
             </div>
             <!-- <div class="exp">
@@ -123,34 +122,34 @@
     </div>
 </div>
 <!-- Honer And Awards -->
-<div class="container mt-5">
-    <div class="row mx-auto justify-content-center">
-        <div class="col-lg-5 col-12">
-                <h2>Honers & Awards </h2>
+<div class="container-fluid mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-3 col-12">
+                <h2 class="wow">Honers & Awards </h2>
         </div>
-        <div class="col-lg-5 col-12">
-            <div class="card" style="width: 23rem;">
+        <div class="col-lg-6 col-12">
+            <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Web Designer and Developer</h5>
                     <a href="#" class="card-link">ITSC</a>
                     <h6 class="card-subtitle mb-2 text-muted">March 2020 – Present Addis Ababa</h6>
                 </div>
             </div>
-            <div class="card" style="width: 23rem;">
+            <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Mobile App Programer</h5>
                     <a href="#" class="card-link">AAIT</a>
                     <h6 class="card-subtitle mb-2 text-muted">October 2019 – Present Addis Ababa</h6>
                 </div>
             </div>
-            <div class="card" style="width: 23rem;">
+            <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Software Developer</h5>
                     <a href="#" class="card-link">AAIT</a>
                     <h6 class="card-subtitle mb-2 text-muted">October 2016– Present Addis Ababa</h6>
                 </div>
             </div>
-            <div class="card" style="width: 23rem;">
+            <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Web Designer and Developer</h5>
                     <a href="#" class="card-link">ITSC</a>
@@ -168,15 +167,16 @@
             <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
         <p class="footer-text">
-                © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>, <a href="#" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a>, the <a href="#" target="_blank"><i class="fab fa-r-project"></i> </a><a href="" target="_blank" >blogdown</a> package, and the 
-                <a href="" target="_blank">Academic theme</a> for <a href="" target="_blank">Hugo</a>.
-        <span class="float-right" aria-hidden="true">
-            <a href="#" id="back_to_top">
-                <span class="up_icon">
-                    <i class="fas fa-chevron-up fa-2x"></i>
-                </span>
-            </a>
-        </span>
+            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
+        <div class="text-end">
+            <span class="right-icon" aria-hidden="true">
+                <a href="#" id="back_to_top">
+                    <span class="up_icon">
+                        <i class="fas fa-chevron-up fa-2x"></i>
+                    </span>
+                </a>
+            </span>
+        </div>
         </p>
     </footer>
 </div>
