--- a/talk3.html
+++ b/talk3.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha256-4w9DunooKSr3MFXHXWyFER38WmPdm361bQS/2KUWZbU=" crossorigin="anonymous">
-    <title>Personal Website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <title>Abenezer F./Talks3</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100&family=Karla&family=Lora&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
@@ -13,27 +16,30 @@
 <body>
 <!-- The Navigation bar -->
 <nav class="navbar navbar-expand-lg sticky-top" id="nav">
-    <div class="container-fluid">
+    <div class="container-fluid" id="nav-space">
         <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto" id="nav-list">
+                <li class="line nav-item">
+                    <a class="nav-link" href="contact.html">ABOUT</a>
+                </li>
                 <li class="line nav-item active">
                     <a class="nav-link active" href="blog.html">BLOG</a>
                 </li>
                 <li class=" line nav-item">
-                    <a class="nav-link" href="task.html">TASKS</a>
+                    <a class="nav-link" href="talk2.html">TALKS</a>
                 </li>
                 <li class=" line nav-item ">
                     <a class="nav-link" href="gallery.html">GALLERY</a>
                 </li>
                 <li class="line nav-item">
-                    <a class="nav-link" href="contact.html">ABOUT / CONTACTS</a>
+                    <a class="nav-link" href="resume.html">RESUME</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link js-search" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
+                <li class="line nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
@@ -50,36 +56,37 @@
 
 <!-- UPCOMING Contents on the page -->
 <div class="container">
-    <div class="row mx-auto justify-content-center mb-5">
-        <div class="col-lg-2 col-12">
+    <div class="row justify-content-center mb-5">
+        <div class="col-12 col-lg-2">
             <h3>2019</h3>
         </div>
-        <div class=" blog col-lg-6 col-8">
-            <h4><a href="blog.html"> Introduction to Mobile Programing</a> </h4>
+        <div class="blog col-9  col-md-7 col-lg-5">
+            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Mobile Programing</a> </h4>
             <p> two-weaks workshop to introduce the basics of mobile app and UI gesture, which makes mobile programing easy.</p>
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
-            <div class="time">Last Upadated on April 18, 2020 6:00 AM — 10:00 PM . Addis Ababa, 5 killo    
+            <div class="time text-muted">Last Upadated on April 18, 2020 6:00 AM — 10:00 PM . Addis Ababa, 5 killo    
             </div> 
         </div>
-        <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="#" >
-                <img id="logo" src="./assets/images/android (1).jpg" alt="">
-            </a>
+        <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
+            <div class="text-end">
+                <a href="#" >
+                    <img id="logo" src="./assets/images/android (1).jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
     <div class="row mx-auto justify-content-center mb-5">
-        <div class="col-lg-2 col-12">
+        <div class="col-12 col-lg-2">
             <h3></h3>
         </div>
-        <div class=" blog col-lg-6 col-8">
-            <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
+        <div class="blog col-9 col-md-7 col-lg-5">
+            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
             <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
-
-            <div class="time">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
+            <div class="time text-muted">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
                 <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
@@ -93,23 +100,24 @@
                 </a>
             </div>
         </div>
-        <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="#" >
-                <img id="logo" src="./assets/images/python.jpg" alt="">
-            </a>
+        <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
+            <div class="text-end">
+                <a href="#" >
+                    <img id="logo" src="./assets/images/python.jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
-    <div class="row mx-auto justify-content-center mb-5">
-        <div class="col-lg-2 col-12">
+    <div class="row justify-content-center mb-5">
+        <div class="col-12 col-lg-2">
             <h3></h3>
         </div>
-        <div class=" blog col-lg-6 col-8">
-            <h4><a href="blog.html"> Photoshop and Photo Design</a> </h4>
+        <div class="blog col-9 col-md-7 col-lg-5">
+            <h4><a class="text-decoration-none" href="blog.html"> Photoshop and Photo Design</a> </h4>
             <p>Re-design photos and add text effect, color effect and more new features inorder to make your photo intersting.</p>
-
-            <div class="time">Last Upadated on Mar 5, 2020  19 min read</div> 
+            <div class="time text-muted">Last Upadated on Mar 5, 2020  19 min read</div> 
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
                 <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
@@ -117,23 +125,24 @@
                 </a>
             </div>
         </div>
-        <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="#" >
-                <img id="logo" src="./assets/images/photoshop.jpg" alt="">
-            </a>
+        <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
+            <div class="text-end">
+                <a href="#" >
+                    <img id="logo" src="./assets/images/photoshop.jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
-    <div class="row mx-auto justify-content-center mb-5">
-        <div class="col-lg-2 col-12">
+    <div class="row justify-content-center mb-5">
+        <div class="col-12 col-lg-2">
             <h3>2018</h3>
         </div>
-        <div class=" blog col-lg-6 col-8">
-            <h4><a href="blog.html"> Web Design and Development:</a> </h4>
+        <div class="blog col-9 col-md-5 col-lg-5 ">
+            <h4><a class="text-decoration-none" href="blog.html"> Web Design and Development:</a> </h4>
             <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
-
-            <div class="time">June 10, 2020  3 hours</div> 
+            <div class="time text-muted">June 10, 2020  3 hours</div> 
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
                 <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
@@ -144,23 +153,24 @@
                 </a>
             </div>
         </div>
-        <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="#" >
-                <img id="logo" src="./assets/images/web.jpg" alt="">
-            </a>
+        <div class="col-3  col-md-5 col-lg-2" id="blog-img-space">
+            <div class="text-end">
+                <a href="#" >
+                    <img id="logo" src="./assets/images/web.jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
-    <div class="row mx-auto justify-content-center mb-5">
-        <div class="col-lg-2 col-12">
+    <div class="row justify-content-center mb-5">
+        <div class="col-12 col-lg-2">
             <h3></h3>
         </div>
-        <div class=" blog col-lg-6 col-8">
-            <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
+        <div class="blog col-9 col-md-7 col-lg-5">
+            <h4><a class="text-decoration-none" href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
             <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
-
-            <div class="time">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
+            <div class="time text-muted">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
             <span>
-                <a href="index.html">Abenezer Fekadu</a>
+                <a class="text-decoration-none" href="index.html">Abenezer Fekadu</a>
             </span>
             <div class="btn-adds">
                 <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
@@ -172,77 +182,14 @@
                 <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
                     <i class="fab fa-github mr-1"></i>materials
                 </a>
-
             </div>
         </div>
-        <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="#" >
-                <img id="logo" src="./assets/images/python.jpg" alt="">
-            </a>
-        </div>
-    </div>
-    <div class="row mx-auto justify-content-center mb-5">
-        <div class="col-lg-2 col-12">
-            <h3></h3>
-        </div>
-        <div class=" blog col-lg-6 col-8">
-            <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
-            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
-
-            <div class="time">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
-            <span>
-                <a href="index.html">Abenezer Fekadu</a>
-            </span>
-            <div class="btn-adds">
-
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                        project
+        <div class="col-3 col-md-5 col-lg-2" id="blog-img-space">
+            <div class="text-end">
+                <a href="#" >
+                    <img id="logo" src="./assets/images/python.jpg" alt="">
                 </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-images mr-1"></i>slides
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fab fa-github mr-1"></i>materials
-                </a>
-
             </div>
-        </div>
-        <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="#" >
-                <img id="logo" src="./assets/images/python.jpg" alt="">
-            </a>
-        </div>
-    </div>
-    <div class="row mx-auto justify-content-center mb-5">
-        <div class="col-lg-2 col-12">
-            <h3>2017</h3>
-        </div>
-        <div class=" blog col-lg-6 col-8">
-            <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
-            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
-
-            <div class="time">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
-            <span>
-                <a href="index.html">Abenezer Fekadu</a>
-            </span>
-            <div class="btn-adds">
-
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                        project
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fas fa-door-open mr-1"></i></i>websites
-                </a>
-                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
-                    <i class="fab fa-github mr-1"></i>materials
-                </a>
-
-            </div>
-        </div>
-        <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="#" >
-                <img id="logo" src="./assets/images/python.jpg" alt="">
-            </a>
         </div>
     </div>
 </div>
@@ -257,17 +204,22 @@
             <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
         <p class="footer-text">
-                © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>, <a href="#" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a>, the <a href="#" target="_blank"><i class="fab fa-r-project"></i> </a><a href="" target="_blank" >blogdown</a> package, and the 
-                <a href="" target="_blank">Academic theme</a> for <a href="" target="_blank">Hugo</a>.
-        <span class="float-right" aria-hidden="true">
-            <a href="#" id="back_to_top">
-                <span class="up_icon">
-                    <i class="fas fa-chevron-up fa-2x"></i>
-                </span>
-            </a>
-        </span>
+            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
+        <div class="text-end">
+            <span class="right-icon" aria-hidden="true">
+                <a href="#" id="back_to_top">
+                    <span class="up_icon">
+                        <i class="fas fa-chevron-up fa-2x"></i>
+                    </span>
+                </a>
+            </span>
+        </div>
         </p>
     </footer>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
